fix overflow mobile device

--- a/scss/Layouts/_project.scss
+++ b/scss/Layouts/_project.scss
@@ -1,5 +1,4 @@
 .project {
-  overflow-x: hidden;
   width: 80%;
   margin: 126px auto;
   &_title {
