--- a/scss/Layouts/_resume.scss
+++ b/scss/Layouts/_resume.scss
@@ -1,5 +1,4 @@
 .resume {
-  overflow-x: hidden;
   @extend %widthCenter;
   padding-top: 96px;
   background-color: $white;
